--- a/dataAnalysis/week3/.vscode/settings.json
+++ b/dataAnalysis/week3/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp",
+        "algorithm": "cpp",
+        "*.tcc": "cpp",
+        "iosfwd": "cpp",
+        "ostream": "cpp"
     }
 }
